# minihub

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TASKS.md  TASKS_COMPLETED.md  docker-compose.yml  justfile  minihub.toml.example  release-plz.toml
.github/workflows/: ci.yml  release-docker.yml  release-plz.yml  test.yml
crates/adapters/adapter_ble/: CHANGELOG.md  Cargo.toml
crates/adapters/adapter_ble/src/: config.rs  error.rs  gatt.rs  lib.rs  miflora.rs  parser.rs  scanner.rs
crates/adapters/adapter_ble/src/devices/: lywsd03mmc.rs  miflora.rs  mod.rs
crates/adapters/adapter_dashboard_leptos/: Cargo.toml  index.html  style.css
crates/adapters/adapter_dashboard_leptos/src/: api.rs  lib.rs  main.rs  sse.rs
crates/adapters/adapter_dashboard_leptos/src/components/: automation_table.rs  chart.rs  event_table.rs  mod.rs  nav.rs  toast.rs
crates/adapters/adapter_dashboard_leptos/src/pages/: areas.rs  automation_detail.rs  automations.rs  devices.rs  entities.rs  entity_detail.rs  events.rs  home.rs  mod.rs  not_found.rs
crates/adapters/adapter_http_axum/: CHANGELOG.md  Cargo.toml
crates/adapters/adapter_http_axum/src/: api.rs  dashboard.rs  error.rs  lib.rs  router.rs  state.rs
crates/adapters/adapter_http_axum/src/api/: areas.rs  automations.rs  devices.rs  entities.rs  entity_history.rs  events.rs  mod.rs  sse.rs
crates/adapters/adapter_http_axum/src/dashboard/: areas.rs  automations.rs  devices.rs  entities.rs  events.rs  home.rs  mod.rs
crates/adapters/adapter_http_axum/templates/: area_list.html  automation_detail.html  automation_list.html  base.html  device_list.html  entity_detail.html  entity_list.html  error.html  event_list.html  home.html
crates/adapters/adapter_mqtt/: CHANGELOG.md  Cargo.toml
crates/adapters/adapter_mqtt/src/: config.rs  error.rs  lib.rs
crates/adapters/adapter_storage_sqlite_sqlx/: CHANGELOG.md  Cargo.toml
crates/adapters/adapter_storage_sqlite_sqlx/migrations/: 20260208203624_initial.sql  20260210150000_uuid_blob.sql  20260221000000_entity_history.sql  20260302000000_entity_mac_address.sql
crates/adapters/adapter_storage_sqlite_sqlx/src/: area_repo.rs  automation_repo.rs  device_repo.rs  entity_history_repo.rs  entity_repo.rs  error.rs  event_store.rs  lib.rs  migrations.rs  pool.rs  repos.rs
crates/adapters/adapter_virtual/: CHANGELOG.md  Cargo.toml
crates/adapters/adapter_virtual/src/: lib.rs
crates/adapters/adapter_virtual/src/devices/: light.rs  mod.rs  sensor.rs  switch.rs
crates/adapters/ble/: CHANGELOG.md  Cargo.toml
crates/adapters/ble/src/: error.rs  lib.rs  parser.rs  scanner.rs
crates/adapters/ble/src/devices/: miflora.rs
crates/adapters/dashboard_leptos/: Cargo.toml  style.css
crates/adapters/dashboard_leptos/src/: api.rs
crates/adapters/dashboard_leptos/src/components/: area_table.rs  device_table.rs  entity_table.rs  loading.rs  mod.rs  plant_card.rs  sensor_card.rs  stat_card.rs  theme_toggle.rs  toast.rs
crates/adapters/dashboard_leptos/src/pages/: areas.rs  device_detail.rs  devices.rs  entity_detail.rs  home.rs  not_found.rs
crates/adapters/http_axum/: CHANGELOG.md  Cargo.toml
crates/adapters/http_axum/src/: lib.rs  router.rs  state.rs
crates/adapters/http_axum/src/api/: devices.rs  entities.rs  mod.rs
crates/adapters/mqtt/: CHANGELOG.md  Cargo.toml
crates/adapters/mqtt/src/: error.rs  lib.rs
crates/adapters/plants/: CHANGELOG.md  Cargo.toml
crates/adapters/plants/src/: health.rs  lib.rs
crates/adapters/storage_sqlite_sqlx/: CHANGELOG.md  Cargo.toml
crates/adapters/storage_sqlite_sqlx/migrations/: 20260209141500_events.sql  20260209160000_automations.sql  20260209200000_device_unique_id.sql
crates/adapters/storage_sqlite_sqlx/src/: error.rs  event_store.rs  pool.rs
crates/adapters/virtual/: CHANGELOG.md  Cargo.toml
crates/adapters/virtual/src/: lib.rs
crates/app/: CHANGELOG.md  Cargo.toml
crates/app/src/: automation_engine.rs  event_bus.rs  lib.rs  ports.rs  services.rs
crates/app/src/ports/: automation_repo.rs  event_bus.rs  event_store.rs  integration.rs  storage.rs
crates/app/src/services/: area_service.rs  automation_service.rs  device_service.rs  entity_service.rs  integration_context.rs
crates/domain/: CHANGELOG.md  Cargo.toml
crates/domain/src/: area.rs  automation.rs  device.rs  entity.rs  entity_history.rs  error.rs  event.rs  id.rs  lib.rs  service.rs  time.rs
crates/domain/src/automation/: action.rs  condition.rs  mod.rs  trigger.rs
crates/domain/src/entity/: attribute_value.rs  state.rs
docs/: ARCHITECTURE.md  DECISIONS.md
