[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/app",
    "crates/adapters/adapter_http_axum",
    "crates/adapters/adapter_storage_sqlite_sqlx",
    "crates/adapters/adapter_virtual",
    "crates/adapters/adapter_mqtt",
    "crates/adapters/adapter_ble",
    "crates/bin/minihubd",
]
exclude = [
    "crates/adapters/adapter_dashboard_leptos",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_USER/minihub"

[workspace.dependencies]
# Domain & application crates (internal)
minihub-domain = { path = "crates/domain" }
minihub-app = { path = "crates/app" }
minihub-adapter-http-axum = { path = "crates/adapters/adapter_http_axum" }
minihub-adapter-storage-sqlite-sqlx = { path = "crates/adapters/adapter_storage_sqlite_sqlx" }
minihub-adapter-virtual = { path = "crates/adapters/adapter_virtual" }
minihub-adapter-mqtt = { path = "crates/adapters/adapter_mqtt" }
minihub-adapter-ble = { path = "crates/adapters/adapter_ble" }

# External dependencies
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
toml = "0.8"
btleplug = "0.11"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
