[package]
name = "minihub-domain"
description = "Domain model for minihub — entities, value objects, and domain logic. No IO, no frameworks."
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
