[package]
name = "minihub-adapter-ble"
description = "Passive BLE adapter — scans for Xiaomi LYWSD03MMC (ATC firmware) advertisements."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
minihub-domain = { workspace = true }
minihub-app = { workspace = true }
btleplug = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
