[package]
name = "minihub-adapter-ble"
description = "BLE adapter — scans for BLE sensor advertisements and reads Mi Flora plant sensors via GATT."
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
minihub-domain = { workspace = true }
minihub-app = { workspace = true }
btleplug = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync", "time"] }
tokio-stream = "0.1"
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
