[package]
name = "adapter_dashboard_leptos"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "minihub-dashboard"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", default-features = false }
leptos_router = { version = "0.7", default-features = false }
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minihub-domain = { path = "../../domain" }

# WASM-specific dependencies
uuid = { version = "1", features = ["v4", "serde", "js"] }
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent", "Event", "EventTarget", "HtmlCanvasElement", "Window"] }
wasm-bindgen = "0.2"

# Charting
plotters = { version = "0.3", default-features = false, features = ["line_series", "datetime"] }
plotters-canvas = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
