[package]
name = "minihub-adapter-http-axum"
description = "HTTP adapter using axum — serves the REST API and the no-JS SSR dashboard."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
minihub-domain = { workspace = true }
minihub-app = { workspace = true }

[lints]
workspace = true
