[package]
name = "minihub-adapter-mqtt"
description = "MQTT adapter (optional) — bridges MQTT devices into minihub. Placeholder for future implementation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
minihub-domain = { workspace = true }
minihub-app = { workspace = true }

[lints]
workspace = true
