[package]
name = "minihub-adapter-mqtt"
description = "MQTT adapter — bridges MQTT-based devices into minihub via rumqttc."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
minihub-domain = { workspace = true }
minihub-app = { workspace = true }
rumqttc = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
