[package]
name = "minihub-adapter-virtual"
description = "Virtual/demo integration adapter — provides simulated light, sensor, and switch devices for testing and demonstration."
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
minihub-domain = { workspace = true }
minihub-app = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
