[package]
name = "minihub-adapter-http-axum"
description = "HTTP adapter using axum — serves the REST API and static dashboard assets."
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
minihub-domain = { workspace = true }
minihub-app = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
