[package]
name = "minihub-adapter-plants"
description = "Plant health integration — computes plant health from Mi Flora sensor data."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
minihub-domain = { workspace = true }
minihub-app = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
