[package]
name = "minihub-adapter-storage-sqlite-sqlx"
description = "SQLite persistence adapter using sqlx — implements storage port traits defined in minihub-app."
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
minihub-domain = { workspace = true }
minihub-app = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
